src/styles/site.scss
:root {
    --font-sans: "Lexend", system-ui, sans-serif;

    --font-thin: 100;
    --font-extralight: 200;
    --font-light: 300;
    --font-regular: 400;
    --font-medium: 500;
    --font-semibold: 600;
    --font-bold: 700;
    --font-extrabold: 800;
    --font-black: 900;

    --paper-white: #f2f7fb;

    --highlighter-yellow: #f9e380;
    --highlighter-green: #baf980;

    --sticky-note-yellow-gradient: linear-gradient(0deg, #f9e380, #ecd673);
    --sticky-note-green-gradient: linear-gradient(0deg, #befd8b, #b0f07b);
    --sticky-note-white-gradient: linear-gradient(0deg, #fafdff, #e7f1f8);
    --sticky-note-blue-gradient: linear-gradient(0deg, #b7ebff, #a4def5);

    --cutie-mark-orange: #da5420;

    --text-black: #2b2b2b;
    --text-white: #eeeeee;

    --shadow-medium: 0.15rem 0.15rem 0.35rem rgba(0, 0, 0, 0.15), 0rem 0rem 0.1rem rgba(0, 0, 0, 0.1);
    --shadow-large: 0.33rem 0.33rem 1rem rgba(0, 0, 0, 0.15), 0rem 0rem 0.2rem rgba(0, 0, 0, 0.1);

    --filter-shadow-medium: drop-shadow(0.15rem 0.15rem 0.15rem rgba(0, 0, 0, 0.15))
        drop-shadow(0rem 0rem 0.1rem rgba(0, 0, 0, 0.05));
    --filter-shadow-large: drop-shadow(0.33rem 0.33rem 1rem rgba(0, 0, 0, 0.15))
        drop-shadow(0rem 0rem 0.2rem rgba(0, 0, 0, 0.1));

    font-size: 112.5%; // 18px

    --site-content-width: 75ch;
    --site-content-spacing: 2rem;
    --site-content-edge: 0.5rem;
}

@media screen and (max-width: 1400px) {
    :root {
        font-size: 106.25%; // 17px
    }
}

@media screen and (max-width: 400px) {
    :root {
        font-size: 100%; // 16px
    }
}

@media screen and (max-width: 350px) {
    :root {
        font-size: 87.5%; // 14px
    }
}

@media screen and (max-width: 300px) {
    :root {
        font-size: 75%; // 12px
    }
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    display: flex;
    flex-direction: column;

    min-height: 100svh;

    margin: 0;

    font-family: var(--font-sans);
    color: var(--text-black);
    line-height: 1.5;

    overflow-y: scroll;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
figure,
figcaption {
    margin: 0;

    font-size: 1em;
    font-weight: inherit;
}

a {
    color: inherit;
    text-decoration: none;
}

img,
picture,
audio,
video {
    display: block;
    line-height: 1.1;
}

button {
    padding: unset;

    border: unset;
    background: unset;

    font-family: inherit;
    font-size: 1em;
    color: inherit;

    cursor: pointer;
}

ul,
ol {
    margin: unset;
    padding: unset;
    list-style: none;
}

.hidden {
    display: none !important;
}

.background-carpet {
    background-color: #2c4e9c;
    background-image: url("/assets/carpet-overlay.png"), linear-gradient(45deg, #2c4e9c, #2668b0);
    background-size: 40rem, auto;
    background-repeat: repeat, no-repeat;
    background-blend-mode: overlay, normal;
    background-attachment: scroll, fixed;
}

